--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "tsx watch ./src/index.ts",
     "start": "node ./dist/index.js",
     "build": "tsc",
-    "gen":"drizzle-kit generate",
-    "migrate":"tsx src/drizzle/migrate.ts"
+    "gen": "drizzle-kit generate",
+    "migrate": "tsx src/drizzle/migrate.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,13 +16,20 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
+    "hono": "^4.4.11",
     "pg": "^8.12.0"
   },
   "devDependencies": {
+    "@hono/node-server": "^1.12.0",
+    "@hono/prometheus": "^1.0.1",
+    "@hono/zod-validator": "^0.2.2",
+    "@neondatabase/serverless": "^0.9.4",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.14.9",
     "@types/pg": "^8.11.6",
     "drizzle-kit": "^0.22.8",
     "tsx": "^4.16.0",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "zod": "^3.23.8"
   }
 }
