--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node ./dist/index.js",
     "build": "tsc",
     "gen": "drizzle-kit generate",
-    "migrate": "tsx src/drizzle/migrate.ts"
+    "migrate": "tsx src/drizzle/migrate.ts",
+    "push": "drizzle-kit push"
   },
   "keywords": [],
   "author": "",
