--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
 PORT=3000
 JWT_SECRET=secret
-Database_URL="postgresql://Abdulrahman%20Sadque:yw7t5FsZjRWi@ep-bitter-star-a24lx0gh.eu-central-1.aws.neon.tech/VehicleHireManagementSys?sslmode=require"
+Database_URL="postgresql://Abdulrahman%20Sadque:yw7t5FsZjRWi@ep-bitter-star-a24lx0gh.eu-central-1.aws.neon.tech/vehicleHireProject?sslmode=require"
