--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 
 PORT=3000
-JWT_SECRET=secret
+
+EXPIRESIN=1h
+SECRET=SECRET
+
 Database_URL="postgresql://Abdulrahman%20Sadque:yw7t5FsZjRWi@ep-bitter-star-a24lx0gh.eu-central-1.aws.neon.tech/vehicleHireProject?sslmode=require"
